# app/api/export_schema.py
@@ -24,36 +24,37 @@ logger = structlog.get_logger()
 
 # Models to include in generated TS (filters out FastAPI internals
 # like HTTPValidationError / ValidationError).
-_INCLUDE = {
+_INCLUDE = (
     "BacktestMode",
-    "BacktestRequest",
-    "BacktestStartResponse",
-    "RunSummary",
-    "RunDetail",
-    "TimeseriesResponse",
-    "HistoryResponse",
-    "DataStatusResponse",
-    "DownloadStartResponse",
-    "StrategyInfo",
-    "PresetCreate",
-    "PresetUpdate",
-    "PresetResponse",
     "SignalQuality",
     "SignalHumanOutcome",
-    "SignalReplayRunRequest",
-    "SignalReplayStartResponse",
+    "SignalTradeExit",
+    "SignalReplayRunSummary",
+    "BacktestStartResponse",
+    "SignalReplayListResponse",
+    "SignalReplaySignalDetail",
+    "SignalForwardMetricResponse",
+    "PresetUpdate",
+    "PresetResponse",
+    "DataStatusResponse",
+    "DownloadStartResponse",
+    "SignalReviewUpdate",
     "SignalReplaySourceAvailability",
     "SignalReplayAvailabilityResponse",
-    "SignalReplayRunSummary",
-    "SignalForwardMetricResponse",
+    "PresetCreate",
+    "HistoryResponse",
     "SignalReviewResponse",
-    "SignalReviewUpdate",
+    "StrategyInfo",
+    "BacktestRequest",
     "SignalReplaySignalSummary",
-    "SignalReplaySignalDetail",
-    "SignalReplayListResponse",
-    "SignalReplayRunDetail",
     "SignalChartResponse",
-}
+    "SignalReplayStartResponse",
+    "SignalReplayRunRequest",
+    "RunDetail",
+    "TimeseriesResponse",
+    "RunSummary",
+    "SignalReplayRunDetail",
+)
 
 
 # ---------------------------------------------------------------------------
